unpackaged/main/default/objects/Audit_Plan__c/Audit_Plan__c.object-meta.xml
<CustomObject>
    <label>Audit Plan</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Audit Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>