unpackaged/main/default/objects/Audit_Plan__c/fields/Audit_Coordinator__c.field-meta.xml
<CustomField>
        <fullName>Audit_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Plans1</relationshipName>
        <type>Lookup</type>
    </CustomField>