unpackaged/main/default/objects/Audit_Plan__c/fields/Audit_Frequency__c.field-meta.xml
<CustomField>
        <fullName>Audit_Frequency__c</fullName>
        <label>Audit Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Every Two Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>