unpackaged/main/default/objects/Audit_Plan__c/fields/Audit_Plan_Type__c.field-meta.xml
<CustomField>
        <fullName>Audit_Plan_Type__c</fullName>
        <label>Audit Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>