unpackaged/main/default/objects/Audit_Plan__c/fields/Plan_Year__c.field-meta.xml
<CustomField>
        <fullName>Plan_Year__c</fullName>
        <label>Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>