unpackaged/main/default/objects/Audit_Plan__c/fields/Quarter__c.field-meta.xml
<CustomField>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>